examples/01-clean-code-arch-simple/src/domain/orders/errors/invalid-order-item-error.ts
export class InvalidOrderItemError extends Error {
  constructor(message: string) {
    super(message);
    this.name = "InvalidOrderItemError";
  }
}
